--- a/index.html
+++ b/index.html
@@ -12,28 +12,45 @@
 <body class="">
     <div class="flex items-center justify-center flex-col gap-5 !min-h-[100dvh] py-8">
         <h1 class="text-center text-3xl capitalize font-bold text-sky-800">our gallery</h1>
-        <div class="grid grid-cols-1 md:px-32 px-4 gap-5 md:gap-12 items-center">
+        <div class="grid grid-cols-1 md:px-28 px-4 gap-5 md:gap-12 items-center">
             <!-- <div class="bg-sky-200 p-5 md:h-[400px] rounded-3xl flex items-center justify-center font-semibold md:text-3xl md:text-left text-center text-blue-900">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum hic iste ratione fuga a provident repudiandae quos at asperiores, maxime nostrum soluta quaerat aperiam accusamus magni doloribus! Ea, accusantium perferendis.</p>
             </div> -->
             <div class="grid grid-cols-6 grid-rows-8  gap-3 h-[80vh]  ">
-                <img src="photo-1454391304352-2bf4678b1a7a.jpg" class=" row-span-2  col-span-3  w-full h-full object-cover" alt="">
-                <img src="photo-1468413253725-0d5181091126.jpg" class=" row-span-1  col-span-1  h-full object-cover w-full" alt="">
-                <img src="photo-1471922694854-ff1b63b20054.jpg" class=" row-span-2  col-span-2  h-full object-cover w-full" alt="">
-                <img src="photo-1503756234508-e32369269deb.jpg" class=" row-span-1  col-span-1  h-full object-cover w-full" alt="">
-                <img src="photo-1473186578172-c141e6798cf4.jpg" class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
-                <img src="photo-1475924156734-496f6cac6ec1.jpg" class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
-                <img src="photo-1473116763249-2faaef81ccda.jpg" class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
-                <img src="photo-1505142468610-359e7d316be0.jpg" class=" row-span-2  col-span-3  w-full h-full object-cover " alt="">
-                <img src="photo-1506929562872-bb421503ef21.jpeg" class=" row-span-2  col-span-3  w-full h-full object-cover " alt="">
-                <img src="photo-1510414842594-a61c69b5ae57.jpg" class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
-                <img src="photo-1515238152791-8216bfdf89a7.jpg" class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
-                <img src="photo-1519046904884-53103b34b206.jpg" class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
-                <img src="photo-1520942702018-0862200e6873.jpg" class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
-                <img src="photo-1531514381259-8c9fedc910b8.jpg" class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
-                <img src="photo-1559494007-9f5847c49d94.jpg" class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
-                <img src="premium_photo-1669750817438-3f7f3112de8d.jpg" class=" row-span-  col-span-2  w-full h-full object-cover " alt="">
-                <img src="premium_photo-1682629632657-4ac307921295.jpg" class=" row-span-  col-span-  w-full h-full object-cover " alt="">
+                <img src="photo-1468413253725-0d5181091126.jpg"
+                    class=" row-span-2  col-span-3  w-full h-full object-cover" alt="">
+                <img src="photo-1454391304352-2bf4678b1a7a.jpg"
+                    class=" row-span-1  col-span-1  h-full object-cover w-full" alt="">
+                <img src="photo-1471922694854-ff1b63b20054.jpg"
+                    class=" row-span-2  col-span-2  h-full object-cover w-full" alt="">
+                <img src="photo-1503756234508-e32369269deb.jpg"
+                    class=" row-span-1  col-span-1  h-full object-cover w-full" alt="">
+                <img src="photo-1473186578172-c141e6798cf4.jpg"
+                    class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
+                <img src="photo-1475924156734-496f6cac6ec1.jpg"
+                    class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
+                <img src="photo-1473116763249-2faaef81ccda.jpg"
+                    class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
+                <img src="photo-1505142468610-359e7d316be0.jpg"
+                    class=" row-span-2  col-span-3  w-full h-full object-cover " alt="">
+                <img src="photo-1506929562872-bb421503ef21.jpeg"
+                    class=" row-span-2  col-span-3  w-full h-full object-cover " alt="">
+                <img src="photo-1510414842594-a61c69b5ae57.jpg"
+                    class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
+                <img src="photo-1515238152791-8216bfdf89a7.jpg"
+                    class=" row-span-2  col-span-2  w-full h-full object-cover " alt="">
+                <img src="photo-1519046904884-53103b34b206.jpg"
+                    class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
+                <img src="photo-1520942702018-0862200e6873.jpg"
+                    class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
+                <img src="photo-1531514381259-8c9fedc910b8.jpg"
+                    class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
+                <img src="photo-1559494007-9f5847c49d94.jpg"
+                    class=" row-span-1  col-span-1  w-full h-full object-cover " alt="">
+                <img src="premium_photo-1669750817438-3f7f3112de8d.jpg"
+                    class=" row-span-  col-span-2  w-full h-full object-cover " alt="">
+                <img src="premium_photo-1682629632657-4ac307921295.jpg"
+                    class=" row-span-  col-span-  w-full h-full object-cover " alt="">
             </div>
         </div>
     </div>
